--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -8,7 +8,7 @@ html{
     background-color: rgb(204, 197, 197);
     width: 100%;
     bottom: 0;
-    position: fixed;
+    position: absolute;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     align-items: center;
