--- a/src/Components/ItemList/ItemList.css
+++ b/src/Components/ItemList/ItemList.css
@@ -1,5 +1,6 @@
 .ItemListContainer {
     margin: 5%;
+    padding-bottom: 3rem;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-around;
